Create a new link with a relative path.

--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -9,6 +9,6 @@
 <body>
     Du skall ut på en resa. Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...
 
-    <p><a href="file:///C:/Users/Administrator/Documents/Vecka%204/JS%20days/AdventureForALifetime/TheChildhood.html">Proceed to The Childhood!</a></p>
+    <p><a href="TheChildhood.html">Proceed to The Childhood!</a></p>
 </body>
 </html>
