Make a reltive path to the picture in TheForever.

--- a/AdventureForALifetime/TheForever.html
+++ b/AdventureForALifetime/TheForever.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p><img src ="C:\Users\Administrator\Documents\Vecka 4\JS days\AdventureForALifetime\image\TheForever.jpg"></p>
+<p><img src ="image\TheForever.jpg"></p>
 
 
 <p>GRATTIS! Du klarade dig igenom samtliga nivåer i livet och lever nu vidare föralltid i nivån <strong>The Forever</strong></p>
