--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -7,8 +7,8 @@
     <title>AdventureForALifetime</title>
 </head>
 <body>
-    Du skall ut på en resa. Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...
+   <center> Du skall ut på en resa. Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...
 
-    <p><a href="TheChildhood.html">Proceed to The Childhood!</a></p>
+    <p><a href="TheChildhood.html">Proceed to The Childhood!</a></center></p>
 </body>
 </html>
