Center the index, again.

--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -7,7 +7,9 @@
     <title>AdventureForALifetime</title>
 </head>
 <body>
-   <center> Du skall ut på en resa. Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...
+   <header><center> Du skall ut på en resa.</header>
+   
+   <p>Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...</p>
 
     <p><a href="TheChildhood.html">Proceed to The Childhood!</a></center></p>
 </body>
