Put picture in index.

--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
    <header><center> Du skall ut på en resa.</header>
+
+    <img src="image/index.jpg">
    
    <p>Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...</p>
 
