Put picture and the text center in index.

--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -7,11 +7,11 @@
     <title>AdventureForALifetime</title>
 </head>
 <body>
-   <header><center> Du skall ut på en resa.</header>
+   <header><center> Du skall ut på en resa.</center></header>
 
-    <img src="image/index.jpg">
+    <p><center><img src="image/index.jpg"></center></p>
    
-   <p>Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...</p>
+   <p><center>Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...</p>
 
     <p><a href="TheChildhood.html">Proceed to The Childhood!</a></center></p>
 </body>
