--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -11,7 +11,7 @@
 
     <p><center><img src="image/index.jpg"></center></p>
    
-   <p><center>Klicka på länken nedan, och vad redo för att ta rätt beslut i livet...</p>
+   <p><center>Klicka på länken nedan, och var redo för att ta rätt beslut i livet...</p>
 
     <p><a href="TheChildhood.html">Proceed to The Childhood!</a></center></p>
 </body>
