Create the CSS fpor the HTML-files.

--- a/AdventureForALifetime/TheForever.html
+++ b/AdventureForALifetime/TheForever.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
     <title>TheForever</title>
 </head>
-<center><header>Adventure Of a Lifetime</header>
+<header>Adventure Of a Lifetime</header>
 
 <body>
 
 <p><img src ="image\TheForever.jpg"></p>
 
 
-<p>GRATTIS! Du klarade dig igenom samtliga nivåer i livet och lever nu vidare föralltid i nivån <strong>The Forever</strong></p>
-</center>
+<p>GRATTIS!</p>
+<p>Du klarade dig igenom samtliga nivåer i livet och lever nu vidare föralltid i landet The Forever.</p>
+
 </body>
 </html>
