--- a/AdventureForALifetime/TheYouth.html
+++ b/AdventureForALifetime/TheYouth.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+
     <title>TheYouth</title>
 </head>
 <body>
-    <header><center>The Youth</center></header>
+    <header>The Youth</header>
 
-        <p><center><img src ="image/TheYouth.jpg"></center></p>
+        <p><img src ="image/TheYouth.jpg"></p>
 
 
-        <p><center>Dina val i ungedomens glada dagar:</p>
+        <p>Dina val i ungdomens glada dagar:</p>
         
         <p><ul>
             <li><a href="TheElderly.html">Klipp dig och skaffa dig en utbildning</a></li>
-            <li><a href="index.html">Ta en till öl</a></li>
-        </center></ul></p>
+            <li><a href="index.html">Ta en till öl.. (eller två, eller tio).</a></li>
+        </ul></p>
     
 </body>
 </html>
