--- a/AdventureForALifetime/index.html
+++ b/AdventureForALifetime/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+
     <title>AdventureForALifetime</title>
 </head>
 <body>
-   <header><center> Du skall ut på en resa.</center></header>
+   <header> Du skall ut på en resa.</header>
 
-    <p><center><img src="image/index.jpg"></center></p>
+    <p><img src="image/index.jpg"></p>
    
-   <p><center>Klicka på länken nedan, och var redo för att ta rätt beslut i livet...</p>
+   <p>Klicka på länken nedan, och var redo för att ta rätt beslut i livet...</p>
 
-    <p><a href="TheChildhood.html">Proceed to The Childhood!</a></center></p>
+    <p><a href="TheChildhood.html">Proceed to The Childhood!</a></p>
 </body>
 </html>
