--- a/AdventureForALifetime/TheChildhood.html
+++ b/AdventureForALifetime/TheChildhood.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+
     <title>The Childhood</title>
 </head>
 <body>
    
-<header><center>The Childhood</center></header>   
+<header>The Childhood</header>   
 
-<p><center><img src ="image/TheChildhood.jpg"></p>
+<p><img src ="image/TheChildhood.jpg"></p>
 
 
 <p>Dina val i livet:</p>
@@ -18,7 +21,7 @@
 <p><ul>
     <li><a href="TheYouth.html">Välj att bädda din säng</a></li>
     <li><a href="index.html">Välj att stanna hemma från skolan</a></li>
-</center></ul></p>
+</ul></p>
     
 </body>
 </html>
